--- a/config/database.yml
+++ b/config/database.yml
@@ -17,26 +17,30 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV.fetch("DB_USERNAME") { 'postgres' } %>
+  password: <%= ENV.fetch("DB_PASSWORD") { 'postgres' } %>
+  host: <%= ENV.fetch("DB_HOST") { 'localhost' } %>
+  port: <%= ENV.fetch("DB_PORT") { 5432 } %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: warranty_manager_development
+  database: <%= ENV.fetch("DB_NAME") { "warranty_manager_development" } %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: postgres
+  # username: postgres
   # The password associated with the postgres role (username).
-  password: postgres
+  # password: postgres
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: localhost
-  port: 5432
+  # host: localhost
+  # port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -52,7 +56,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: warranty_manager_test
+  database: <%= ENV.fetch("DB_NAME") { "warranty_manager_test" } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -76,6 +80,5 @@ test:
 #
 production:
   <<: *default
-  database: warranty_manager_production
-  username: warranty_manager
-  password: <%= ENV["WARRANTY_MANAGER_DATABASE_PASSWORD"] %>
+  database: <%= ENV.fetch("DB_NAME") { "warranty_manager_production" } %>
+
