--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@
 !/tmp/.keep
 
 # Ignore env
-# /.env
+ /.env
+ /.env.local
+ /.env.docker
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
