--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   app:
     build:
@@ -5,11 +6,11 @@ services:
       dockerfile: Dockerfile
     container_name: app-api
     ports:
-      - "5000:5000"
+      - "3000:3000"
     volumes:
       - ./:/app
     environment:
-      - PORT=5000
+      - PORT=3000
       - DB_NAME=${DB_NAME}
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
